--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@
 
 [metadata]
 name = slo-generator
-version = 2.3.3
+version = 2.3.4
 author = Google Inc.
 author_email = olivier.cervello@gmail.com
 maintainer = Laurent VAYLET
@@ -95,6 +95,8 @@ elasticsearch =
     elasticsearch
 cloudevent =
     cloudevents
+splunk =
+    splunk-sdk
 dev =
     pip >=22.3  # avoid known vulnerabilities in pip 20.3.4 (reported by `safety check`)
     wheel
